--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -57,7 +57,7 @@
                                         making it look like readable English.</p>
                                 </div>
                                 <div class="col-lg-6 col-md-12 r-mt3">
-                                    <img class="img-fluid" src="../../../assets/images/about/about-img.gif" alt="image">
+                                    <img class="img-fluid" src="../../../assets/images/about/about-us.png" alt="image">
                                 </div>
                             </div>
                             <div class="row">
