--- a/src/app/company/training/training.component.html
+++ b/src/app/company/training/training.component.html
@@ -2,13 +2,13 @@
   <div class="card">
     <div class="card-body">
       <div class="card-title training-title">
-        {{ trainingTitle }}
         <div
           [ngClass]="{
             blink_me: isTraining,
             'completed-training': !isTraining
           }"
-        ></div>
+        ></div>&nbsp;
+        {{ trainingTitle }}
         <button (click)="startTraining()" class="btn btn-success btn-train">Train</button>
       </div>
       
