--- a/src/app/company/intents/create/create.component.css
+++ b/src/app/company/intents/create/create.component.css
@@ -33,7 +33,7 @@
 
 #quicklinks-list {
   overflow-y: scroll;
-  min-height: 40px;
+  height: 80px;
   border: 1px solid lightgray;
   border-radius: 5px;
   display: flex;
