--- a/src/app/company/entity/view/view.component.css
+++ b/src/app/company/entity/view/view.component.css
@@ -43,9 +43,16 @@
 
 #edit-container{
   display: flex;
+  justify-content: space-around;
 }
 
 #edit-form{
   outline: none;
   border: none;
+  padding: 0px;
+}
+
+#edit-container label{
+  font-size: 10px;
+  font-weight: lighter;
 }
