--- a/src/app/company/generic-table/generic-table.component.html
+++ b/src/app/company/generic-table/generic-table.component.html
@@ -43,7 +43,7 @@
             </td>
             <td *ngFor="let col of columns">
 
-                <p *ngIf="col.header === 'Training Date'" > {{rowData[col.field] | date :"MM/dd/yyyy"}}</p>
+                <p *ngIf="col.header === 'Training Date'" > {{rowData[col.field] | date :"MM/dd/yyyy h:mm a"}}</p>
 
                 <button *ngIf="col.header === 'View Script'; else normalField" (click)="printDiv(rowData[col.field])"
                     style="margin-left: 10px; margin-top: 10px;" class="p-button-help" icon="pi pi-sun" pButton
