--- a/src/app/company/company.component.css
+++ b/src/app/company/company.component.css
@@ -1,3 +1,18 @@
+.notif-container {
+    overflow-y: scroll;
+    min-height: 400px;
+    max-height: 500px;
+    min-width: 300px;
+    max-width: 400px;
+    padding: 20px;
+    background-color: rgb(245, 245, 245);
+    border-radius: 15px;
+}
+#logout-dropdown{
+    display: flex;
+    align-items: center;
+}
+
 .whitesmoke{
     background-color: whitesmoke;
     max-width: 100%;
