replace intent with intentlist

--- a/src/app/company/entity/create/create.component.html
+++ b/src/app/company/entity/create/create.component.html
@@ -161,9 +161,9 @@
               >
                 <option
                   *ngFor="let intentsVar of intentList"
-                  [ngValue]="intentsVar.intent"
+                  [ngValue]="intentsVar"
                 >
-                  {{ intentsVar.intent }}
+                  {{ intentsVar }}
                 </option>
               </select>
             </div>
