--- a/src/app/company/company.component.css
+++ b/src/app/company/company.component.css
@@ -1,8 +1,8 @@
-::ng-deep .p-card .p-card-content{
+::ng-deep .p-card .p-card-content {
     padding: 7px 10px !important;
 }
 
-::ng-deep .p-card .p-card-body{
+::ng-deep .p-card .p-card-body {
     padding: 0px !important;
     margin: 8px !important;
 }
@@ -17,38 +17,39 @@
     background-color: rgb(245, 245, 245);
     border-radius: 15px;
 }
-#logout-dropdown{
+
+#logout-dropdown {
     display: flex;
     align-items: center;
 }
 
-.whitesmoke{
+.whitesmoke {
     background-color: whitesmoke;
     max-width: 100%;
     height: 100%;
     transition: all 0.5s;
 }
 
-.navbar-open{
+.navbar-open {
     transition: all 0.5s;
     transform: translateX(250px);
 }
 
-.navbar-open-button{
+.navbar-open-button {
     background-color: #162137 !important;
 }
 
 
-.navbar-container{
+.navbar-container {
     max-width: 1920px;
     margin: auto;
 }
 
-.dropdown-item{
+.dropdown-item {
     cursor: pointer;
 }
 
-.navbar-toggle{
+.navbar-toggle {
     border: none;
     outline: none;
     background-color: #7d4ac7;
@@ -58,20 +59,24 @@
     transition: transform 0.3s;
     z-index: 99;
     transition: all 0.5s;
-    
+
 }
-.navbar-toggle i{
+
+.navbar-toggle i {
     transition: transform 0.3s;
 }
-.navbar-toggle:active i{
+
+.navbar-toggle:active i {
     transform: scale(0.8);
 }
-.navbar-toggle svg{
+
+.navbar-toggle svg {
     width: 20px;
     height: 15px;
     fill: #fff;
 }
-.title-bar{
+
+.title-bar {
     width: 100%;
     height: 50px;
     background: linear-gradient(to right, #7d4ac7 0%, #a733bb 100%);
@@ -81,7 +86,7 @@
     align-items: center;
     font-weight: lighter;
     font-size: larger;
-        justify-content: space-between;
+    justify-content: space-between;
     box-shadow: 0 6px 4px -4px rgb(0 0 0 / 15%);
 }
 
@@ -90,34 +95,34 @@
     right: 10px;
 }*/
 
-#dropdownMenuLink{
+#dropdownMenuLink {
     background-color: #a136bc;
     outline: none;
     border: none;
 }
 
-#dropdownMenuLink:active{
+#dropdownMenuLink:active {
     outline: none;
     border: none;
 }
 
-#logout-dropdown .dropdown-menu{
-    left:-150px;
+#logout-dropdown .dropdown-menu {
+    left: -150px;
 }
 
-#dropdownMenuLink{
+#dropdownMenuLink {
     color: whitesmoke;
 }
 
-@media screen and (min-width:600px){
-    .navbar-open{
+@media screen and (min-width:600px) {
+    .navbar-open {
         transition: all 0.5s;
         width: calc(100% - 250px);
     }
 }
 
 @media screen and (max-width:601px) {
-    .navbar-open-container::after{
+    .navbar-open-container::after {
         content: "";
         position: absolute;
         height: 100%;
@@ -129,51 +134,58 @@
     }
 }
 
-#noti-fi{
-   width: 25px;
+#noti-fi {
+    width: 25px;
     fill: #fff;
     margin-right: 15px;
 }
-#not-sh{
+
+#not-sh {
     background-color: transparent;
-    border:transparent;
+    border: transparent;
 }
+
 #not-sh:hover,
 #not-sh:active,
-#not-sh:focus{
+#not-sh:focus {
     box-shadow: none;
     outline: 0;
     background-color: transparent;
 }
+
 .dropdown-toggle::after {
     display: none;
 }
-#after-cont{
-    padding: 0px!important;
-    -webkit-box-shadow: 0px 7px 13px -5px rgba(0,0,0,0.49);
--moz-box-shadow: 0px 7px 13px -5px rgba(0,0,0,0.49);
-box-shadow: 0px 7px 13px -5px rgba(0,0,0,0.49);
-transform: translate3d(-156px, 39px, 0px);
+
+#after-cont {
+    padding: 0px !important;
+    -webkit-box-shadow: 0px 7px 13px -5px rgba(0, 0, 0, 0.49);
+    -moz-box-shadow: 0px 7px 13px -5px rgba(0, 0, 0, 0.49);
+    box-shadow: 0px 7px 13px -5px rgba(0, 0, 0, 0.49);
+    transform: translate3d(-156px, 39px, 0px);
     width: 200px;
 }
+
 #after-cont::after {
-   content: "";
+    content: "";
     border-top: 0.6em solid #fff;
     border-right: 0.6em solid transparent;
     border-bottom: 0;
     border-left: 0.6em solid transparent;
-    transform: rotate( 180deg);
+    transform: rotate(180deg);
     position: absolute;
     top: -8px;
     right: 0;
 }
-#after-cont a svg{
+
+#after-cont a svg {
     width: 20px;
     overflow: visible;
     vertical-align: -4px;
 }
+
 #after-cont .dropdown-item {
-    padding: 8px 18px; 
+    padding: 8px 18px;
 }
 
 #after-cont .dropdown-item:active,
@@ -183,7 +195,8 @@ transform: translate3d(-156px, 39px, 0px);
     text-decoration: none;
     background-color: #9d38bd2e;
 }
-.plan-ex{
+
+.plan-ex {
     background: #162137;
     text-align: center;
     color: #ffff;
@@ -191,4 +204,9 @@ transform: translate3d(-156px, 39px, 0px);
     font-size: 14px;
     margin-bottom: 10px;
     padding-right: 38px;
+}
+
+.notification-button {
+    width: 3.357rem;
+    padding: 0.5rem 0;
 }
