--- a/src/app/company/company.component.html
+++ b/src/app/company/company.component.html
@@ -6,19 +6,20 @@
 
 
 
-   
-<div class="title-bar">
-    <button id="navbar-toggle-sidebar" class="navbar-toggle" [ngClass]="{'navbar-open-button' : smallScreen && sidebarOpen}" (click)="toggleSidebar()">
 
-          <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-             viewBox="0 0 377 377" style="enable-background:new 0 0 377 377;" xml:space="preserve">
+    <div class="title-bar">
+      <button id="navbar-toggle-sidebar" class="navbar-toggle"
+        [ngClass]="{'navbar-open-button' : smallScreen && sidebarOpen}" (click)="toggleSidebar()">
+
+        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+          x="0px" y="0px" viewBox="0 0 377 377" style="enable-background:new 0 0 377 377;" xml:space="preserve">
           <g>
-            <circle cx="15" cy="88.5" r="15"/>
-            <rect x="75" y="73.5" width="302" height="30"/>
-            <circle cx="15" cy="288.5" r="15"/>
-            <rect x="75" y="273.5" width="302" height="30"/>
-            <circle cx="15" cy="188.5" r="15"/>
-            <rect x="75" y="173.5" width="302" height="30"/>
+            <circle cx="15" cy="88.5" r="15" />
+            <rect x="75" y="73.5" width="302" height="30" />
+            <circle cx="15" cy="288.5" r="15" />
+            <rect x="75" y="273.5" width="302" height="30" />
+            <circle cx="15" cy="188.5" r="15" />
+            <rect x="75" y="173.5" width="302" height="30" />
           </g>
           <g>
           </g>
@@ -50,33 +51,34 @@
           </g>
           <g>
           </g>
-          </svg>
+        </svg>
       </button>
-        <span>{{getTitle()}}</span>
-        <!-- noti icon -->
-        <div class="d-flex">
-          <button id="tired" class="notification-button"  pBadge [value]="notificationsList.length.toString()" (click)="op.toggle($event)" pButton icon="pi pi-bell"></button>
-              <!--  -->
-              <div class="dropdown show" id="logout-dropdown">
-                <a class="btn btn-primary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
-                  aria-haspopup="true" aria-expanded="false" id="not-sh">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-person-circle"
-                    viewBox="0 0 16 16">
-                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
-                    <path fill-rule="evenodd"
-                      d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
-                  </svg>
-                </a>
+      <span>{{getTitle()}}</span>
+      <!-- noti icon -->
+      <div class="d-flex">
+        <button id="tired" class="notification-button" pBadge [value]="notificationsList.length.toString()"
+          (click)="op.toggle($event)" pButton icon="pi pi-bell"></button>
+        <!--  -->
+        <div class="dropdown show" id="logout-dropdown">
+          <a class="btn btn-primary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false" id="not-sh">
+            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor"
+              class="bi bi-person-circle" viewBox="0 0 16 16">
+              <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
+              <path fill-rule="evenodd"
+                d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
+            </svg>
+          </a>
 
-                <div class="dropdown-menu dropdown-menu-left" aria-labelledby="dropdownMenuLink" id="after-cont">
-                  <a class="dropdown-item" [routerLink]="['/company/dashboard']">
-                      <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-          x="0px" y="0px" viewBox="0 0 512.009 512.009" style="enable-background:new 0 0 512.009 512.009"
-          xml:space="preserve">
-          <g>
-            <g>
-              <g>
-                <path d="M256.009,42.671c-0.002,0-0.005,0-0.007,0c-0.001,0-0.001,0-0.002,0c-0.001,0-0.002,0-0.003,0
+          <div class="dropdown-menu dropdown-menu-left" aria-labelledby="dropdownMenuLink" id="after-cont">
+            <a class="dropdown-item" [routerLink]="['/company/dashboard']">
+              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512.009 512.009"
+                style="enable-background:new 0 0 512.009 512.009" xml:space="preserve">
+                <g>
+                  <g>
+                    <g>
+                      <path d="M256.009,42.671c-0.002,0-0.005,0-0.007,0c-0.001,0-0.001,0-0.002,0c-0.001,0-0.002,0-0.003,0
         c-70.671,0.003-134.648,28.637-180.967,74.935c-0.016,0.016-0.034,0.029-0.05,0.045c-0.017,0.017-0.03,0.035-0.047,0.052
         C28.688,163.976,0.072,227.867,0.011,298.445C0.011,298.521,0,298.595,0,298.671c0,0.073,0.01,0.143,0.011,0.215
         c0.05,60.201,20.962,117.239,58.515,162.704c4.053,4.907,10.084,7.748,16.448,7.748h362.048c6.364,0,12.395-2.841,16.448-7.748
@@ -88,147 +90,152 @@
         l-14.325,14.325c-8.331,8.331-8.331,21.839,0,30.17c8.331,8.331,21.839,8.331,30.17,0l14.326-14.326
         c25.867,31.607,42.842,70.771,47.103,113.677h-62.95c-11.782,0-21.333,9.551-21.333,21.333c0,11.782,9.551,21.333,21.333,21.333
         h62.95C464.409,359.001,449.97,395.686,426.68,426.671z" />
-                <polygon points="319.991,220.655 199.33,281.007 259.661,341.338       " />
-                <path d="M320,362.671H192c-11.782,0-21.333,9.551-21.333,21.333s9.551,21.333,21.333,21.333h128
+                      <polygon points="319.991,220.655 199.33,281.007 259.661,341.338       " />
+                      <path d="M320,362.671H192c-11.782,0-21.333,9.551-21.333,21.333s9.551,21.333,21.333,21.333h128
         c11.782,0,21.333-9.551,21.333-21.333S331.782,362.671,320,362.671z" />
-              </g>
-            </g>
-          </g>
-          <g></g>
-          <g></g>
-          <g></g>
-          <g></g>
-          <g></g>
-          <g></g>
-          <g></g>
-          <g></g>
-          <g></g>
-          <g></g>
-          <g></g>
-          <g></g>
-          <g></g>
-          <g></g>
-          <g></g>
-        </svg>&nbsp;&nbsp;
-                  Dashboard
-                </a>
-                  <a class="dropdown-item" [routerLink]="['/company/settings']">
+                    </g>
+                  </g>
+                </g>
+                <g></g>
+                <g></g>
+                <g></g>
+                <g></g>
+                <g></g>
+                <g></g>
+                <g></g>
+                <g></g>
+                <g></g>
+                <g></g>
+                <g></g>
+                <g></g>
+                <g></g>
+                <g></g>
+                <g></g>
+              </svg>&nbsp;&nbsp;
+              Dashboard
+            </a>
+            <a class="dropdown-item" [routerLink]="['/company/settings']">
 
-<svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-   viewBox="0 0 480.3 480.3" style="enable-background:new 0 0 480.3 480.3;" xml:space="preserve">
-<g>
-  <g>
-    <path d="M254.15,234.1V13.5c0-7.5-6-13.5-13.5-13.5s-13.5,6-13.5,13.5v220.6c-31.3,6.3-55,34-55,67.2s23.7,60.9,55,67.2v98.2
+              <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 480.3 480.3"
+                style="enable-background:new 0 0 480.3 480.3;" xml:space="preserve">
+                <g>
+                  <g>
+                    <path d="M254.15,234.1V13.5c0-7.5-6-13.5-13.5-13.5s-13.5,6-13.5,13.5v220.6c-31.3,6.3-55,34-55,67.2s23.7,60.9,55,67.2v98.2
       c0,7.5,6,13.5,13.5,13.5s13.5-6,13.5-13.5v-98.2c31.3-6.3,55-34,55-67.2C309.15,268.2,285.55,240.4,254.15,234.1z M240.65,342.8
-      c-22.9,0-41.5-18.6-41.5-41.5s18.6-41.5,41.5-41.5s41.5,18.6,41.5,41.5S263.55,342.8,240.65,342.8z"/>
-    <path d="M88.85,120.9V13.5c0-7.5-6-13.5-13.5-13.5s-13.5,6-13.5,13.5v107.4c-31.3,6.3-55,34-55,67.2s23.7,60.9,55,67.2v211.4
+      c-22.9,0-41.5-18.6-41.5-41.5s18.6-41.5,41.5-41.5s41.5,18.6,41.5,41.5S263.55,342.8,240.65,342.8z" />
+                    <path d="M88.85,120.9V13.5c0-7.5-6-13.5-13.5-13.5s-13.5,6-13.5,13.5v107.4c-31.3,6.3-55,34-55,67.2s23.7,60.9,55,67.2v211.4
       c0,7.5,6,13.5,13.5,13.5s13.5-6,13.5-13.5V255.2c31.3-6.3,55-34,55-67.2S120.15,127.2,88.85,120.9z M75.35,229.6
-      c-22.9,0-41.5-18.6-41.5-41.5s18.6-41.5,41.5-41.5s41.5,18.6,41.5,41.5S98.15,229.6,75.35,229.6z"/>
-    <path d="M418.45,120.9V13.5c0-7.5-6-13.5-13.5-13.5s-13.5,6-13.5,13.5v107.4c-31.3,6.3-55,34-55,67.2s23.7,60.9,55,67.2v211.5
+      c-22.9,0-41.5-18.6-41.5-41.5s18.6-41.5,41.5-41.5s41.5,18.6,41.5,41.5S98.15,229.6,75.35,229.6z" />
+                    <path d="M418.45,120.9V13.5c0-7.5-6-13.5-13.5-13.5s-13.5,6-13.5,13.5v107.4c-31.3,6.3-55,34-55,67.2s23.7,60.9,55,67.2v211.5
       c0,7.5,6,13.5,13.5,13.5s13.5-6,13.5-13.5V255.2c31.3-6.3,55-34,55-67.2S449.85,127.2,418.45,120.9z M404.95,229.6
-      c-22.9,0-41.5-18.6-41.5-41.5s18.6-41.5,41.5-41.5s41.5,18.6,41.5,41.5S427.85,229.6,404.95,229.6z"/>
-  </g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-</svg>&nbsp;&nbsp;
+      c-22.9,0-41.5-18.6-41.5-41.5s18.6-41.5,41.5-41.5s41.5,18.6,41.5,41.5S427.85,229.6,404.95,229.6z" />
+                  </g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+              </svg>&nbsp;&nbsp;
 
-                  Settings
+              Settings
 
-                  </a>
-                  <a class="dropdown-item" [routerLink]="['/company/profile']">
+            </a>
+            <a class="dropdown-item" [routerLink]="['/company/profile']">
 
-<svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-   viewBox="0 0 489 489" style="enable-background:new 0 0 489 489;" xml:space="preserve">
-<g>
-  <g>
-    <path d="M417.4,71.6C371.2,25.4,309.8,0,244.5,0S117.8,25.4,71.6,71.6S0,179.2,0,244.5s25.4,126.7,71.6,172.9S179.2,489,244.5,489
+              <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 489 489"
+                style="enable-background:new 0 0 489 489;" xml:space="preserve">
+                <g>
+                  <g>
+                    <path d="M417.4,71.6C371.2,25.4,309.8,0,244.5,0S117.8,25.4,71.6,71.6S0,179.2,0,244.5s25.4,126.7,71.6,172.9S179.2,489,244.5,489
       s126.7-25.4,172.9-71.6S489,309.8,489,244.5S463.6,117.8,417.4,71.6z M244.5,462C124.6,462,27,364.4,27,244.5S124.6,27,244.5,27
-      S462,124.6,462,244.5S364.4,462,244.5,462z"/>
-    <path d="M244.5,203.2c35.1,0,63.6-28.6,63.6-63.6s-28.5-63.7-63.6-63.7s-63.6,28.6-63.6,63.6S209.4,203.2,244.5,203.2z
-       M244.5,102.9c20.2,0,36.6,16.4,36.6,36.6s-16.4,36.6-36.6,36.6s-36.6-16.4-36.6-36.6S224.3,102.9,244.5,102.9z"/>
-    <path d="M340.9,280.5c-22.3-32.8-54.7-49.5-96.4-49.5s-74.1,16.6-96.4,49.5c-16.6,24.4-27.2,57.7-31.4,98.7
+      S462,124.6,462,244.5S364.4,462,244.5,462z" />
+                    <path d="M244.5,203.2c35.1,0,63.6-28.6,63.6-63.6s-28.5-63.7-63.6-63.7s-63.6,28.6-63.6,63.6S209.4,203.2,244.5,203.2z
+       M244.5,102.9c20.2,0,36.6,16.4,36.6,36.6s-16.4,36.6-36.6,36.6s-36.6-16.4-36.6-36.6S224.3,102.9,244.5,102.9z" />
+                    <path d="M340.9,280.5c-22.3-32.8-54.7-49.5-96.4-49.5s-74.1,16.6-96.4,49.5c-16.6,24.4-27.2,57.7-31.4,98.7
       c-0.8,7.4,4.6,14.1,12,14.8c7.4,0.8,14.1-4.6,14.8-12c8.5-82.3,42.5-124,101-124s92.5,41.7,101,124c0.7,6.9,6.6,12.1,13.4,12.1
-      c0.5,0,0.9,0,1.4-0.1c7.4-0.8,12.8-7.4,12-14.8C368.1,338.1,357.5,304.9,340.9,280.5z"/>
-  </g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-</svg> &nbsp;&nbsp;
+      c0.5,0,0.9,0,1.4-0.1c7.4-0.8,12.8-7.4,12-14.8C368.1,338.1,357.5,304.9,340.9,280.5z" />
+                  </g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+              </svg> &nbsp;&nbsp;
 
-                  Profile
-                   
-                  </a>
-                  <a class="dropdown-item" (click)="logout()">
+              Profile
 
-                    <svg  viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"><path d="M 15 4 L 15 16 L 17 16 L 17 4 Z M 12 4.6875 C 7.347656 6.339844 4 10.785156 4 16 C 4 22.617188 9.382813 28 16 28 C 22.617188 28 28 22.617188 28 16 C 28 10.785156 24.652344 6.339844 20 4.6875 L 20 6.84375 C 23.527344 8.390625 26 11.910156 26 16 C 26 21.515625 21.515625 26 16 26 C 10.484375 26 6 21.515625 6 16 C 6 11.910156 8.472656 8.390625 12 6.84375 Z"/></svg>
-                  &nbsp;&nbsp;Logout</a>
-                </div>
-              </div>
+            </a>
+            <a class="dropdown-item" (click)="logout()">
 
+              <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M 15 4 L 15 16 L 17 16 L 17 4 Z M 12 4.6875 C 7.347656 6.339844 4 10.785156 4 16 C 4 22.617188 9.382813 28 16 28 C 22.617188 28 28 22.617188 28 16 C 28 10.785156 24.652344 6.339844 20 4.6875 L 20 6.84375 C 23.527344 8.390625 26 11.910156 26 16 C 26 21.515625 21.515625 26 16 26 C 10.484375 26 6 21.515625 6 16 C 6 11.910156 8.472656 8.390625 12 6.84375 Z" />
+              </svg>
+              &nbsp;&nbsp;Logout</a>
+          </div>
         </div>
 
+      </div>
 
-</div>
-<div class="plan-ex">
-  Your Plan is Expiring
-</div>
+
+    </div>
+    <div class="plan-ex">
+      Your Plan is Expiring
+    </div>
     <div class="navbar-container" [ngClass]="{'navbar-open-container':sidebarOpen}">
       <router-outlet></router-outlet>
     </div>
@@ -239,16 +246,17 @@
 
 <p-overlayPanel #op>
   <ng-template pTemplate>
-      <span class="notif-title">Notifications</span>
-      <div class="notif-container">
-          <div class="notif-cards">
-              <p-card [title]="notitication?.notification_head" *ngFor="let notitication of notificationsList">
-                  {{notitication?.notification_message}} <i pTooltip="Mark as read" (click)="markAsRead(notitication?.id)" class="pi pi-check notif-actions"></i>
-              </p-card>
-          </div>
+    <span class="notif-title">Notifications</span>
+    <div class="notif-container">
+      <div class="notif-cards">
+        <p-card [title]="notitication?.notification_head" *ngFor="let notitication of notificationsList">
+          {{notitication?.notification_message}} <i pTooltip="Mark as read" (click)="markAsRead(notitication?.id)"
+            class="pi pi-check notif-actions"></i>
+        </p-card>
       </div>
-      <div pTooltip="Mark all as Read" class="notif-actions" (click)="markAllRead()">
-          Mark all as read <i class="pi pi-check"></i>
-      </div>
+    </div>
+    <div pTooltip="Mark all as Read" class="notif-actions" (click)="markAllRead()">
+      Mark all as read <i class="pi pi-check"></i>
+    </div>
   </ng-template>
 </p-overlayPanel>
